[package]
name = "digest-headers"
description = "A simple library to hash a request's body in the headers"
version = "0.1.0"
license = "GPL-3.0"
authors = ["Riley Trautman <rileyt@spiceworks.com>"]
repository = "https://github.com/asonix/digest-headers"
readme = "README.md"
keywords = ["web", "http", "header"]

[features]
default = []
use_hyper = ["hyper", "futures", "tokio-core"]
use_reqwest = ["reqwest"]
use_rocket = ["rocket", "rocket_codegen"]

[dependencies]
base64 = "0.6"
hyper = { version = "0.11", optional = true }
futures = { version = "0.1", optional = true }
tokio-core = { version = "0.1", optional = true }
reqwest = { version = "0.8", optional = true }
rocket = { version = "0.3", optional = true }
rocket_codegen = { version = "0.3", optional = true }

[dependencies.ring]
version = "0.11"
features = ["rsa_signing"]
